# RectangularSurfaceParameterization

./: .gitignore  README.md  run_RSP.m
ComputeParam/: cut_mesh.m  matrix_vector_multiplication.m  mesh_to_disk_seamless.m  parametrization_from_scales.m
FrameField/: brush_frame_field.m  compute_curvature_cross_field.m  compute_face_cross_field.m  plot_frame_field.m  trivial_connection.m
Orthotropic/: objective_ortho_param.m  omega_from_scale.m  optimize_RSP.m  oracle_integrability_condition.m  reduce_corner_var_2d.m  reduce_corner_var_2d_cut.m  reduction_from_ff2d.m
Preprocess/: MeshInfo.m  dec_tri.m  find_graph_generator.m  gaussian_curvature.m  preprocess_ortho_param.m  sort_triangles.m  sort_triangles_comp.m
QuantizationYoann/: CMakeLists.txt  readme.md
QuantizationYoann/src/: cut_graph.cpp  cut_graph.h  decimation.cpp  decimation.h  main.cpp  matrix.h  mesh.cpp  mesh.h  quantization.cpp  quantization.h  vec.h
QuantizationYoann/src/refine/: cgls.cpp  cgls.h  imprint.cpp  imprint.h  reembed.cpp  reembed.h  vectorize.h  vectorize_arm.h
Utils/: extract_scale_from_param.m  save_param.m
